--- a/AsyncProgramming.Business/AsyncProgramming.Business.csproj
+++ b/AsyncProgramming.Business/AsyncProgramming.Business.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AsyncProgramming.Data\AsyncProgramming.Data.csproj" />
     <ProjectReference Include="..\AsyncProgramming.Entity\AsyncProgramming.Entity.csproj" />
   </ItemGroup>
